# protobyte

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  doxygen-template  setup.sh
.github/workflows/: c_cpp.yml
samples/mach-o/: SOSBuddy  SafetyMonitorApp  apfs_boot_util  ltop
src/: elf.cpp  elf.h  file_io.cpp  file_io.h  headers.h  macho.cpp  macho.h  main.cpp  pe.cpp  pe.h  runTests.cpp
src/hash/: md5.cpp  md5.h  sha1.cpp  sha1.h
src/include/: elftest.h  mach_o-test.h  petest.h
src/lib/: elf.cpp  elf.h  file_io.cpp  file_io.h  macho.cpp  macho.h  md5.cpp  md5.h  pe.cpp  pe.h  sha1.cpp  sha1.h
src/unit-tests/: CMakeLists.txt  elftest.h  fileio_test.h  hashtest.h  petest.h  runTests.cpp  unittest.h
src/unit_test/: Makefile  elftest.h  mach_o-test.h  petest.h  runTests  runTests.cpp  unittest.h
unit_test/: Makefile  elftest.h  petest.h  runTests.cpp
unit_test/elf/: libresolv.so.2
unit_test/pe/samples/: win32k.sys
